k8s/mlflow-network/ingress.yaml
# k8s/mlflow-network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ingress
  annotations:
    # Essential for non-TLS backend communication
    traefik.ingress.kubernetes.io/service.serversscheme: http

    # New annotation to force Traefik to reload its configuration for the Service
    traefik.ingress.kubernetes.io/service-lb-algorithm: "wrr" 

    # We comment out complex settings to ensure clean routing
    # traefik.ingress.kubernetes.io/passhostheader: "false"
    # traefik.ingress.kubernetes.io/buffering: "false"
    # traefik.ingress.kubernetes.io/loadbalancer.healthcheck.status: "disable"

spec:
  rules:
  - host: mlflow.tuxjob.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow-service
            port:
              number: 5000
