k8s/mlflow-network/network-policy.yaml
# k8s/mlflow-network/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-mlflow
  namespace: go-mlops
spec:
  # Selects the Pods this policy applies to (MLflow Pods)
  podSelector:
    matchLabels:
      app: mlflow
  # The policy applies to incoming traffic
  policyTypes:
    - Ingress
  ingress:
  # 1. Allow ingress from any Pod in the 'go-mlops' namespace
    - from:
        - namespaceSelector:
            matchLabels:
              name: go-mlops
  # 2. Allow ingress on the MLflow port (5000)
      ports:
        - protocol: TCP
          port: 5000
